Fix multiplayer visibility and remote player rendering

--- a/style.css
+++ b/style.css
@@ -733,19 +733,19 @@ body::-webkit-scrollbar {
 .remote-player {
   position: absolute;
   left: 0;
-  top: 0;
+  bottom: 0;
   width: 25px;
-  height: 50px;
+  height: auto;
   z-index: 19;
   pointer-events: none;
 }
 
 .remote-player-body {
-  position: absolute;
-  inset: 0;
-  background: var(--remote-player-color, #7dd3fc);
-  -webkit-mask: url("player-white.png") center / contain no-repeat;
-  mask: url("player-white.png") center / contain no-repeat;
+  display: block;
+  width: 100%;
+  height: auto;
+  user-select: none;
+  pointer-events: none;
 }
 
 .remote-player.needs-outline .remote-player-body {
@@ -759,7 +759,7 @@ body::-webkit-scrollbar {
 .remote-player-name {
   position: absolute;
   left: 50%;
-  top: 14.5px;
+  bottom: calc(100% + 2px);
   transform: translateX(-50%);
   min-width: 24px;
   max-width: 75px;
